# Windows-Searcher

./: CMakeLists.txt  Searcher.h  extraCommands.cpp  main.cpp  optioneer.cpp  styler.cpp
Island/: CMakeLists.txt  Island.h  main.cpp  util.cpp  widgetData.cpp
Searcher/: CMakeLists.txt  README.md  Searcher.h  build.bat  extraCommands.cpp  main.cpp  optioneer.cpp  styler.cpp
